syntax = "proto3";

package auth;

option go_package = "go-courier/proto/authpb";

service AuthService{
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);
}

message RegisterRequest{
    optional string username = 1;
    optional string password = 2;
};

message LoginRequest{
    optional string username = 1;
    optional string password = 2;
};

message AuthResponse{
    string token = 1;
    string message = 2;
}